--- a/BottomNavigationViewLibrary/src/main/res/values/attrs.xml
+++ b/BottomNavigationViewLibrary/src/main/res/values/attrs.xml
@@ -18,6 +18,9 @@
         <attr name="bnv_inactive_text_size" format="dimension" />
         <!-- The color of an activated tab. Will only be considered if bnv_colored_background is false, no default is set -->
         <attr name="bnv_active_color" format="color" />
+
+        <attr name="bnv_scroll_enabled" format="boolean" />
+        <attr name="bnv_animation_duration" format="integer" />
     </declare-styleable>
 
 </resources>
